# algolabra

./: README.md  pyproject.toml  tasks.py
dokumentaatio/: kayttoohje.md  maarittelydokumentti.md  testausdokumentti.md  toteutusdokumentti.md
dokumentaatio/viikkoraportit/: viikko1.md  viikko2.md  viikko3.md  viikko4.md  viikko5.md  viikko6.md
src/: app.py  helpers.py  pathfinding.py  settings.py  ui.py
src/tests/: test_pathfinding.py  test_ui.py
src/tests/maps/: test.map
